service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-kubernetes
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: hello-kubernetes
